--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Chapel Hill Outdoors</title>
-    <meta charset="utf-8">
-      <link rel="stylesheet" type="text/css" href="base.css">
-</head>
+	<html>
+		<head>
+			<title>INDEX</title>
+		</head>
 
-<body>
-  <h1>Things To Do In Chapel Hill</h1>
+		<body>
+			<h3>Team member names and onyens</h3>
+			<ul>
+				<li>Meggie Cruser - mscruser</li>
+				<li>Kaylee Lewellyn - kayleell</li>
+				<li>Spencer Lichtenberg - slichten</li>
+			</ul>
+			<h3>Project Title</h3>
+			<div>Explore Chapel Hill Outdoors</div>
+			<h3>Project Description</h3>
+			<div>Our website aims to be a user-friendly tool for finding nearby outdoor activities in Chapel Hill, 
+				mainly hiking, biking, camping, and disc-golfing (the finality of these 4 options is up for debate).
+				The user will navigate through a javascript-enabled aesthetically pleasing home page in order to select a hike, bike trail, camping space, or disc-golf course (There will be numerous pages for each kind of activity). This will load the information page (see mock-up below), which will display information on the chosen activity. There will only be one design for the information page, but the information displayed will be different depending on the specific hike, etc. chosen. This will be accomplished with a back-end database containing information on each activity. The information page contains pictures (maybe), a map loaded by the Google API, information, a twitter feed including any hashtag mention of that hike/course/etc, links to other activities the user may like, and a of course a link back to the home page. We still don't know what other features will be included in the site, but this is the basic idea. We believe that this adequately meets the requirements for the final project, but aren't totally positive.</div>
+			<h3>Links</h3>
+			<div>The info page contains all the info stated above, and also links to other activities
+			<a href="infoPage.html">This is a mock-up of the info page for a random hike we chose</a>
+			</div>
+			<div>The home page is for navigating to different infoPages on hikes/etc
+			<a href="homePage.html">This is a mock-up of the home page, which isn't nearly operational yet</a>
+			</div>
+
